# cisco_dialplan

./: .env (sample)  .gitignore  Pipfile  README.rst  TODO  config.yml (example)  configure_wxc.py  delete_dialplans.py  dial-patterns-template.csv  normalize.py  normalized.csv  patterns.csv  pyproject.toml  read_ucm.py  requirements.txt
config/: __init__.py
cpapi_helper/: __init__.py
script/: build
ucmaxl/: __init__.py
